4.4.0 (#89)
* updating to 4.4.0

* updating to 4.4.0

* updating to 4.4.0

* adding docker file for 4.4
JWT generation will only work on standalone instances as default keystore is being copied over

* updating to 4.4.0

* updating to 4.4.0

* updating to 4.4.0

* updating SACL document

Co-authored-by: Pushkar Marathe <pushkar.marathe@strongkey.com>